[package]
name = "yatotp"
version = "0.1.0"
edition = "2021"
authers = ["Nobuto Kaitoh <nobutoka@gmail.com>"]
description = "A yet another TOTP client which stores its data locally."
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"
data-encoding = "2.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3"
dialoguer = "0.9"
chacha20poly1305 = "0.9"
rand = {version = "0.8", features = ["std"]}
argon2 = "0.3"

[dev-dependencies]
tempfile = "3.2"

[badges]
maintainance = {status = "actively-developed"}
