[package]
name = "yatotp"
version = "0.3.0"
edition = "2021"
authors = ["Nobuto Kaitoh <nobutoka@gmail.com>"]
description = "Yet Another TOTP client which stores its data locally."
license = "AGPL-3.0-or-later"
exclude = ["*.yatotp"]
repository = "https://github.com/NOBUTOKA/yatotp"
categories = ["authentication", "command-line-utilities"]

[dependencies]
chrono = "0.4"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"
data-encoding = "2.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
chacha20poly1305 = "0.9"
rand = {version = "0.8", features = ["std"]}
argon2 = "0.3"
structopt = {version = "0.3", optional = true}
dialoguer = {version = "0.9", optional = true}

[features]
cli = ["structopt", "dialoguer"]

[lib]
name = "yatotp"
path = "src/lib.rs"

[[bin]]
name = "yatotp-cli"
required-features = ["cli"]
path = "src/cli/bin/main.rs"

[dev-dependencies]
tempfile = "3.2"

[badges]
maintenance = {status = "actively-developed"}
github = {repository = "NOBUTOKA/yatotp", workflow = "Rust"}
